--- a/iTunes/UI/Storyboard/Base.lproj/LaunchScreen.storyboard
+++ b/iTunes/UI/Storyboard/Base.lproj/LaunchScreen.storyboard
@@ -18,14 +18,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch-screen" translatesAutoresizingMaskIntoConstraints="NO" id="28J-RP-3kL">
-                                <rect key="frame" x="0.0" y="248" width="414" height="400"/>
+                                <rect key="frame" x="79" y="320" width="256" height="256"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="28J-RP-3kL" secondAttribute="height" id="Gfw-LC-fwp"/>
+                                    <constraint firstAttribute="width" constant="256" id="fB4-ub-y1W"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="28J-RP-3kL" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="9IW-Nm-XLD"/>
-                            <constraint firstItem="28J-RP-3kL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Scp-vJ-e3J"/>
                             <constraint firstItem="28J-RP-3kL" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="waz-oj-sj7"/>
                         </constraints>
                     </view>
